_sass/components/tooltip.scss
.tooltip {
  position: relative;

  &__container {
    display: none;
    position: absolute;
    z-index: 100;
    border-radius: 8px;
    background: #fff;
    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .2);
  }

  &__close {
    display: block;
    width: 24px;
    height: 24px;
    background: url(../icons/close-tooltip.svg) no-repeat center;
    position: absolute;
    top: 12px;
    right: 42px;
    cursor: pointer;
  }

  &__arrow {
    display: block;
    width: 50px;
    height: 25px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    overflow: hidden;

    &::after {
      content: "";
      position: absolute;
      width: 16px;
      height: 16px;
      background: white;
      transform: translateX(-50%) translateY(-50%) rotate(45deg);
      left: 50%;
      box-shadow: 1px 1px 8px 0px rgba(0, 0, 0, .2);
    }
  }

  &-bottom {
    top: 40px;
    left: 0;
    padding: 0 21px 6px 21px;

    .tooltip__arrow {
      bottom: 100%;

      &::after {
        top: 100%;
      }
    }
  }

  &-top {
    left: 0;
    bottom: 100%;

    .tooltip__arrow {
      top: 100%;

      &::after {
        top: 0;
      }
    }
  }

  &-left {
    right: 100%;

    .tooltip__arrow {
      width: 25px;
      height: 50px;
      top: 0;
      left: 100%;
      transform: initial;

      &::after {
        top: 50%;
        transform: translate(-50%, -50%) rotate(45deg);
        left: 0;
      }
    }
  }
}

